--- a/app/src/main/res/layout/activity_lancement_jeu2.xml
+++ b/app/src/main/res/layout/activity_lancement_jeu2.xml
@@ -34,18 +34,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="240dp"
-        android:layout_height="127dp"
-        android:fontFamily="sans-serif"
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/buttonJouer"
+        android:layout_width="276dp"
+        android:layout_height="72dp"
+        android:background="#F44336"
+        android:backgroundTint="#F44336"
         android:text="À toi de jouer!"
-        android:textColor="#F44336"
         android:textSize="34sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.678" />
+        tools:layout_editor_absoluteY="521dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
