--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -106,8 +106,18 @@
         android:layout_height="64dp"
         android:layout_margin="100dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/logo_shadow"
-        tools:layout_editor_absoluteX="0dp" />
+        app:srcCompat="@drawable/logo_shadow" />
+
+    <Button
+        android:id="@+id/button16"
+        android:layout_width="184dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="40dp"
+        android:text="Jeu 2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tableLayout3" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
