--- a/app/src/main/res/layout/activity_jeu1.xml
+++ b/app/src/main/res/layout/activity_jeu1.xml
@@ -28,8 +28,14 @@
             android:textSize="24sp"
             android:typeface="sans" />
 
+        <Space
+            android:id="@+id/Space"
+            android:layout_width="match_parent"
+            android:layout_height="47dp"
+            android:visibility="gone" />
+
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/button20"
+            android:id="@+id/buttonequation1"
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -46,7 +52,7 @@
             android:visibility="gone" />
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/button19"
+            android:id="@+id/buttonequation2"
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -63,7 +69,7 @@
             android:visibility="gone" />
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/button22"
+            android:id="@+id/buttonequation3"
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
