--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="15dp"
         android:fontFamily="sans-serif-thin"
+        android:onClick="goto_profil"
         android:text="_XxJustinDu13xX_"
         android:textAlignment="textEnd"
         android:textColor="@color/colorText"
