--- a/app/src/main/res/layout/activity_fin_jeu2.xml
+++ b/app/src/main/res/layout/activity_fin_jeu2.xml
@@ -41,10 +41,39 @@
 
     <TextView
         android:id="@+id/textViewfin2jeu"
+        android:layout_width="324dp"
+        android:layout_height="205dp"
+        android:layout_marginTop="52dp"
+        android:text="Félicitations!"
+        android:textAlignment="center"
+        android:textSize="48sp"
+        android:textStyle="italic"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageView14" />
+
+    <TextView
+        android:id="@+id/textView11"
+        android:layout_width="314dp"
+        android:layout_height="192dp"
+        android:layout_marginTop="72dp"
+        android:text="Oh non!"
+        android:textAlignment="center"
+        android:textSize="34sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="oisdoflskd"
-        android:textStyle="italic"
-        tools:layout_editor_absoluteX="155dp"
-        tools:layout_editor_absoluteY="91dp" />
+        android:layout_marginTop="152dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageView14"
+        app:srcCompat="@drawable/pouce" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
