--- a/app/src/main/res/layout/activity_jeu3.xml
+++ b/app/src/main/res/layout/activity_jeu3.xml
@@ -6,7 +6,21 @@
     android:layout_height="match_parent"
     tools:context=".Jeu1Activity">
 
+    <TextView
+        android:id="@+id/textscore3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="200dp"
+        android:layout_marginBottom="250dp"
+        android:text="Score :"
+        android:visibility="visible"
+        app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <LinearLayout
+        android:id="@+id/linearLayout5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
