--- a/app/src/main/res/layout/activity_addition.xml
+++ b/app/src/main/res/layout/activity_addition.xml
@@ -13,44 +13,68 @@
     app:layout_marginBaseline="5dp"
     tools:context=".activity_addition">
 
-    <TextView
-        android:id="@+id/explication_add"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="48dp"
-        android:layout_marginRight="5dp"
-        android:text="hello addition"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <ScrollView
+        android:id="@+id/scrollView3"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp">
 
-    <ImageView
-        android:id="@+id/addition_image"
-        android:layout_width="404dp"
-        android:layout_height="308dp"
-        android:layout_marginTop="28dp"
-        android:scaleX="0.5"
-        android:scaleY="0.5"
-        app:layout_constraintTop_toTopOf="@+id/titre"
-        app:srcCompat="@drawable/add"
-        tools:layout_editor_absoluteX="0dp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/retenue"
-        android:layout_width="220dp"
-        android:layout_height="65dp"
-        android:layout_marginTop="236dp"
-        android:background="#160D98"
-        android:fontFamily="cursive"
-        android:gravity="center"
-        android:text="La retenue"
-        android:textColor="#FBFBFB"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+            <TextView
+                android:id="@+id/explication_add"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="56dp"
+                android:layout_marginRight="5dp"
+                android:text="hello addition" />
+
+            <ImageView
+                android:id="@+id/addition_image"
+                android:layout_width="404dp"
+                android:layout_height="240dp"
+                android:layout_marginLeft="-30dp"
+                android:layout_marginTop="-80dp"
+                android:scaleX="0.5"
+                android:scaleY="0.5"
+                app:srcCompat="@drawable/add" />
+
+            <TextView
+                android:id="@+id/retenue"
+                android:layout_width="220dp"
+                android:layout_height="65dp"
+                android:layout_marginLeft="70dp"
+                android:layout_marginTop="-65dp"
+                android:background="#160D98"
+                android:fontFamily="cursive"
+                android:gravity="center"
+                android:text="La retenue"
+                android:textColor="#FBFBFB"
+                android:textSize="24sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/ex_retenue"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:text="TextView" />
+
+            <ImageView
+                android:id="@+id/imageView8"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="110dp"
+                android:layout_marginEnd="116dp"
+                app:srcCompat="@drawable/calcul" />
+
+        </LinearLayout>
+    </ScrollView>
 
     <TextView
         android:id="@+id/titre"
@@ -62,16 +86,7 @@
         android:text="Addition"
         android:textColor="#04061E"
         android:textSize="34sp"
-        android:textStyle="bold" />
-
-    <ImageView
-        android:id="@+id/imageView8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="428dp"
-        android:layout_marginEnd="116dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/calcul" />
+        android:textStyle="bold"
+        tools:layout_editor_absoluteY="543dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
