--- a/app/src/main/res/layout/activity_division.xml
+++ b/app/src/main/res/layout/activity_division.xml
@@ -23,14 +23,14 @@
 
     <ScrollView
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginTop="44dp"
         app:layout_constraintTop_toTopOf="@+id/titre_division"
         tools:layout_editor_absoluteX="-1dp">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:orientation="vertical">
 
             <TextView
@@ -62,7 +62,7 @@
                 android:id="@+id/exemple"
                 android:layout_width="250dp"
                 android:layout_height="65dp"
-                android:layout_marginLeft="80dp"
+                android:layout_marginLeft="60dp"
                 android:background="#160D98"
                 android:fontFamily="cursive"
                 android:gravity="center"
@@ -102,7 +102,8 @@
             <ImageView
                 android:id="@+id/imageView9"
                 android:layout_width="wrap_content"
-                android:layout_height="300dp"
+                android:layout_height="240dp"
+                android:layout_marginTop="-20dp"
                 android:scaleX="0.75"
                 android:scaleY="0.75"
                 android:src="@drawable/div2" />
@@ -112,6 +113,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
+                android:layout_marginTop="-30dp"
                 android:layout_marginRight="5dp"
                 android:width="200dp"
                 android:text="hello div3" />
@@ -119,7 +121,8 @@
             <ImageView
                 android:id="@+id/imageView4"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="240dp"
+                android:layout_marginBottom="20dp"
                 android:scaleX="0.8"
                 android:scaleY="0.8"
                 app:srcCompat="@drawable/div3" />
