--- a/app/src/main/res/layout/activity_lancement_jeu2.xml
+++ b/app/src/main/res/layout/activity_lancement_jeu2.xml
@@ -40,10 +40,12 @@
         android:layout_height="98dp"
         android:background="#F44336"
         android:backgroundTint="#F44336"
+        android:onClick="launchGame2"
         android:text="À toi de jouer!"
         android:textSize="34sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
