--- a/app/src/main/res/layout/activity_lancement_jeu3.xml
+++ b/app/src/main/res/layout/activity_lancement_jeu3.xml
@@ -8,10 +8,11 @@
 
     <TextView
         android:id="@+id/textView12"
-        android:layout_width="406dp"
-        android:layout_height="288dp"
+        android:layout_width="411dp"
+        android:layout_height="388dp"
         android:layout_marginTop="116dp"
         android:text="Répond aux questions le plus rapidement possible. Chaque bonne réponse te rajoute du temps et chaque mauvaise réponse t'en enlève."
+        android:textAlignment="center"
         android:textSize="34sp"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="2dp" />
@@ -20,7 +21,8 @@
         android:id="@+id/button16"
         android:layout_width="192dp"
         android:layout_height="77dp"
-        android:text="Button"
+        android:onClick="launchGame3"
+        android:text="C'est parti!"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
